# socialmediamanager

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6be5eeb27aed_initial_schema.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: ai.py  analytics.py  auth.py  best_time.py  bulk_schedule.py  content_categories.py  inbox.py  (+8 more)
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  analytics.py  best_time.py  content_category.py  first_comment.py  inbox.py  link_in_bio.py  media_asset.py  post.py  social_account.py  user.py
backend/app/schemas/: ai.py  analytics.py  best_time.py  bulk_schedule.py  content_category.py  feed_planner.py  first_comment.py  inbox.py  link_in_bio.py  media.py  post.py  settings.py  social_account.py  strategy.py  user.py
backend/app/services/: ai_service.py  analytics_service.py  auth_service.py  best_time_service.py  bulk_schedule_service.py  content_category_service.py  feed_planner_service.py  first_comment_service.py  inbox_service.py  link_in_bio_service.py  media_service.py  post_service.py  strategy_copilot_service.py
backend/app/utils/: health_monitor.py  rate_limiter.py
backend/app/workers/: analytics_tasks.py  celery_app.py  publish_tasks.py
backend/tests/: conftest.py  test_accounts.py  test_analytics.py  test_auth.py  test_health.py  test_media.py  test_posts.py  test_security.py  test_settings.py
(+44 files in other folders)
